# arithmetic-wild

./: .gitignore  README.md  pyproject.toml
best_das/Llama-3.1-8B/: L18_addition.yaml  L18_hours.yaml  L18_months.yaml  L18_weekdays.yaml
datasets/Llama-3.1-8B/hours/: filter_metadata.json  filtered_dataset.json
datasets/Llama-3.1-8B/months/: filter_metadata.json  filtered_dataset.json  filtered_dataset.json.bak.number
datasets/Llama-3.1-8B/weekdays/: filter_metadata.json  filtered_dataset.json
src/: cache_neuron_activations.py  cl_patch.py  collect_pca.py  cross_task_patch.ipynb  cross_task_patch.py  dynamic_downproj.ipynb  extra_addition_neurons.json  generate_dataset.py  load_das_subspaces.ipynb  missed_neurons.ipynb  neuron_selection.ipynb  neuron_selection_sweep.ipynb  neurons_across_prompts.ipynb  neurons_across_sums.ipynb  neurons_per_task.json  rephrased_templates.ipynb  static_downproj.ipynb  train_das.py  utils.py
src/fourier_probes/: fourier_probes_sweep.py  fourier_steering.ipynb  pca_fourier_probes_sweep.py
src/fourier_probes/addition_probes_layer_18_last_token_resid/: probe_period100_cos.pt  probe_period100_sin.pt  probe_period10_cos.pt  probe_period10_sin.pt  probe_period20_cos.pt  probe_period20_sin.pt  probe_period2_cos.pt  probe_period2_sin.pt  probe_period50_cos.pt  probe_period50_sin.pt  probe_period5_cos.pt  probe_period5_sin.pt
src/tasks/: __init__.py  counterfactuals.py
src/tasks/addition/: __init__.py  causal_models.py  token_positions.py
src/tasks/hours/: __init__.py  causal_models.py  token_positions.py
(+6 files in other folders)
